# richard_agente_finanzas_personales

./: .env.example  .gitignore  README.md  a2a_server.py  config.py  main.py  mcp_server.py  prompts.py  pyproject.toml  requirements.txt  telegram_bot.py  ui.py
docs/: prompt_dificil_para_testear.md
richard/: __init__.py  agent.py  config.py  prompts.py  tools.py
